src/test/ui/suggestions/attribute-typos.stderr
error: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/attribute-typos.rs:7:3
   |
LL | #[rustc_err]
   |   ^^^^^^^^^

error: cannot find attribute `rustc_err` in this scope
  --> $DIR/attribute-typos.rs:7:3
   |
LL | #[rustc_err]
   |   ^^^^^^^^^ help: did you mean `rustc_error`? (a similarly named built-in attribute)

error: cannot find attribute `tests` in this scope
  --> $DIR/attribute-typos.rs:4:3
   |
LL | #[tests]
   |   ^^^^^ help: did you mean `test`? (a similarly named attribute macro)
   |
  ::: $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
LL |     pub macro test($item:item) {
   |     -------------------------- similarly named attribute macro `test` defined here

error: cannot find attribute `deprcated` in this scope
  --> $DIR/attribute-typos.rs:1:3
   |
LL | #[deprcated]
   |   ^^^^^^^^^ help: did you mean `deprecated`? (a similarly named built-in attribute)

error: aborting due to 4 previous errors

